--- a/portfolio/Crystal/app/css/main.css
+++ b/portfolio/Crystal/app/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .main-page {
   position: relative;
   z-index: 1;
@@ -770,6 +771,59 @@
 
 .stock {
   padding-top: 20px; }
+  .stock .sub_title {
+    width: 25%;
+    position: relative;
+    margin-top: 23px; }
+    .stock .sub_title:after {
+      content: 'улыбнись удаче!';
+      position: absolute;
+      right: 0;
+      top: 0;
+      -webkit-transform: translateX(150%);
+          -ms-transform: translateX(150%);
+              transform: translateX(150%);
+      font: 1.2em "SupermolotRegular";
+      line-height: 85%;
+      text-transform: uppercase;
+      letter-spacing: 1em;
+      color: #939598; }
+    .stock .sub_title .txt_block {
+      padding: 2px 30px;
+      position: relative; }
+      .stock .sub_title .txt_block span {
+        display: block;
+        color: #939598; }
+      .stock .sub_title .txt_block .top {
+        font: 2em "SupermolotLight";
+        letter-spacing: 0.7em;
+        text-transform: uppercase;
+        text-align: right;
+        margin-right: -0.7em; }
+      .stock .sub_title .txt_block .bottom {
+        font: 3em "SupermolotLight";
+        letter-spacing: 0.7em;
+        text-transform: uppercase;
+        text-align: left;
+        line-height: 110%; }
+      .stock .sub_title .txt_block:before, .stock .sub_title .txt_block:after {
+        content: '';
+        display: block;
+        position: absolute;
+        height: 30px;
+        width: 20px;
+        white-space: nowrap;
+        border: 1px solid #939598; }
+      .stock .sub_title .txt_block:before {
+        bottom: 0;
+        left: 0;
+        border-top: none;
+        border-right: none; }
+      .stock .sub_title .txt_block:after {
+        right: 0;
+        top: 0;
+        border-left: none;
+        border-bottom: none; }
 
 @media screen and (min-width: 1025px) {
   .links_block a:hover,
