--- a/portfolio/Crystal/app/scss/main.scss
+++ b/portfolio/Crystal/app/scss/main.scss
@@ -754,6 +754,66 @@
 
 .stock {
     padding-top: 20px;
+    .sub_title {
+        width: 25%;
+        position: relative;
+        margin-top: 23px;
+        &:after {
+            content: 'улыбнись удаче!';
+            position: absolute;
+            right: 0;
+            top: 0;
+            transform: translateX(150%);
+            font: 1.2em "SupermolotRegular";
+            line-height: 85%;
+            text-transform: uppercase;
+            letter-spacing: 1em;
+            color: #939598;
+        }
+        .txt_block {
+            padding: 2px 30px;
+            position: relative;
+            span {
+                display: block;
+                color: #939598;
+            }
+            .top {
+                font: 2em "SupermolotLight";
+                letter-spacing: 0.7em;
+                text-transform: uppercase;
+                text-align: right;
+                margin-right: -0.7em;
+            }
+            .bottom {
+                font: 3em "SupermolotLight";
+                letter-spacing: 0.7em;
+                text-transform: uppercase;
+                text-align: left;
+                line-height: 110%;
+            }
+            &:before, &:after {
+                content: '';
+                display: block;
+                position: absolute;
+                height: 30px;
+                width: 20px;
+                white-space: nowrap;
+                border: 1px solid #939598;
+            }
+            &:before {
+                bottom: 0;
+                left: 0;
+                border-top: none;
+                border-right: none;
+            }
+            &:after {
+                right: 0;
+                top: 0;
+                border-left: none;
+                border-bottom: none;
+            }
+        }
+    }
 }
 
 @media screen and (min-width: 1025px) {
