--- a/Shop/card-tiles/app/scss/catalog-tiles.scss
+++ b/Shop/card-tiles/app/scss/catalog-tiles.scss
@@ -463,6 +463,7 @@
 .thumbs_small .thumb {
     align-self: flex-start;
 }
+//
 .thumbs_small .price_container {
     display: flex;
     justify-content: center;
