--- a/Shop/Search-page/app/scss/search.scss
+++ b/Shop/Search-page/app/scss/search.scss
@@ -63,6 +63,7 @@
     .search {
     	border: 1px solid #e5e5e5;
       padding: 55px 25px;
+      margin-right: 0;
       display: flex;
 	justify-content: center;
     }
