--- a/portfolio/Crystal/app/css/main.css
+++ b/portfolio/Crystal/app/css/main.css
@@ -1,8 +1,7 @@
 @charset "UTF-8";
 .main-page {
   position: relative;
-  z-index: 1;
-  padding-bottom: 100px; }
+  z-index: 1; }
 
 .arrow_right,
 .arrow_left,
@@ -840,28 +839,29 @@
     margin-bottom: 20px; }
     .stock_container a.img_link img {
       width: 100%; }
-  .stock_container a.btn {
-    font: 1.8em "SupermolotLight";
-    color: #6d6e71;
-    text-decoration: underline;
-    position: relative; }
-    .stock_container a.btn:after {
-      content: '';
-      height: 24px;
-      position: absolute;
-      right: -3px;
-      top: 0;
-      -webkit-transform: translateX(100%);
-      -ms-transform: translateX(100%);
-      transform: translateX(100%);
-      width: 24px;
-      display: block;
-      background: url(../img/icons/title_copy.png) no-repeat;
-      -webkit-background-size: contain;
-      background-size: contain; }
   .stock_container .block {
     width: 33.33%;
     padding: 0 10px; }
+
+a.btn {
+  font: 1.4em "SupermolotLight";
+  color: #6d6e71;
+  text-decoration: underline;
+  position: relative; }
+  a.btn:after {
+    content: '';
+    height: 20px;
+    position: absolute;
+    right: -3px;
+    top: 0;
+    -webkit-transform: translateX(100%);
+    -ms-transform: translateX(100%);
+    transform: translateX(100%);
+    width: 20px;
+    display: block;
+    background: url(../img/icons/title_copy.png) no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain; }
 
 .competition_crystal {
   margin-top: 80px; }
@@ -910,6 +910,43 @@
     .crystal_life .sub_title:after {
       content: 'ищем персонал'; }
 
+.job_container {
+  margin: 0 -10px;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 15px;
+  margin-bottom: 50px; }
+  .job_container .block_img {
+    width: 33.33%;
+    padding: 0px 10px; }
+    .job_container .block_img .img_content {
+      position: relative;
+      background-color: red; }
+      .job_container .block_img .img_content:before {
+        content: '';
+        display: block;
+        padding-top: 100%; }
+      .job_container .block_img .img_content img {
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 100%; }
+  .job_container .role {
+    display: block;
+    font: 2em "SupermolotLight";
+    text-transform: uppercase;
+    padding-top: 0.8em;
+    letter-spacing: 0.15em;
+    padding-bottom: 0.3em; }
+  .job_container .place {
+    display: block;
+    font: 1.4em "SupermolotLight";
+    text-transform: uppercase;
+    color: #ff0089;
+    padding-bottom: 0.9em; }
+
 @media screen and (min-width: 1025px) {
   .links_block a:hover,
   .crystal_labs .arrow_right:hover,
@@ -917,5 +954,6 @@
   .arrow_right_brands:hover,
   .arrow_left_brands:hover {
     opacity: 1; }
-  .map .more_crystal a:hover {
-    color: #717171; } }
+  .more_crystal a:hover,
+  .btn:hover {
+    color: #000 !important; } }
