--- a/portfolio/Crystal/app/scss/main.scss
+++ b/portfolio/Crystal/app/scss/main.scss
@@ -1,7 +1,6 @@
 .main-page {
     position: relative;
     z-index: 1;
-    padding-bottom: 100px;
 }
 
 .arrow_right,
@@ -831,32 +830,33 @@
             width: 100%;
         }
     }
-    a.btn {
-        font: 1.8em "SupermolotLight";
+    .block {
+        width: 33.33%;
+        padding: 0 10px;
+    }
+}
+
+a.btn {
+        font: 1.4em "SupermolotLight";
         color: #6d6e71;
         text-decoration: underline;
         position: relative;
         &:after {
             content: '';
-            height: 24px;
+            height: 20px;
             position: absolute;
             right: -3px;
             top: 0;
             -webkit-transform: translateX(100%);
             -ms-transform: translateX(100%);
             transform: translateX(100%);
-            width: 24px;
+            width: 20px;
             display: block;
             background: url(../img/icons/title_copy.png) no-repeat;
             -webkit-background-size: contain;
             background-size: contain;
         }
     }
-    .block {
-        width: 33.33%;
-        padding: 0 10px;
-    }
-}
 
 .competition_crystal {
     margin-top: 80px;
@@ -905,6 +905,47 @@
     }
 }
 
+.job_container {
+    margin: 0 -10px;
+    display: flex;
+    margin-top: 15px;
+    margin-bottom: 50px;
+    .block_img {
+        width: 33.33%;
+        padding: 0px 10px;
+        .img_content {
+            position: relative;
+            background-color: red;
+            &:before {
+                content: '';
+                display: block;
+                padding-top: 100%;
+            }
+            img {
+                position: absolute;
+                top: 0;
+                width: 100%;
+                height: 100%;
+            }
+        }
+    }
+    .role {
+        display: block;
+        font: 2em "SupermolotLight";
+        text-transform: uppercase;
+        padding-top: 0.8em;
+        letter-spacing: 0.15em;
+        padding-bottom: 0.3em;
+    }
+    .place {
+        display: block;
+        font: 1.4em "SupermolotLight";
+        text-transform: uppercase;
+        color: #ff0089;
+        padding-bottom: 0.9em;
+    }
+}
+
 @media screen and (min-width: 1025px) {
     .links_block a:hover,
     .crystal_labs .arrow_right:hover,
@@ -913,7 +954,8 @@
     .arrow_left_brands:hover {
         opacity: 1;
     }
-    .map .more_crystal a:hover {
-        color: #717171;
+    .more_crystal a:hover,
+    .btn:hover {
+        color: #000 !important;
     }
 }
