--- a/Shop/Search-page/app/css/search.css
+++ b/Shop/Search-page/app/css/search.css
@@ -46,6 +46,9 @@
     margin-bottom: 20px;
     text-align: center; }
 
+.filter .section .tab_content {
+  display: block; }
+
 .container_search form {
   display: -webkit-box;
   display: -webkit-flex;
@@ -135,14 +138,15 @@
   .catalog-page .count_item {
     display: block; }
   .container_search .input_group {
-    width: auto; } }
+    width: 100%; }
+  .container_search form {
+    width: 100%; } }
 
 @media screen and (max-width: 576px) {
-  .container_search .search {
-    padding: 0px;
-    border: none; }
   .search_inform {
     display: none; }
+  .container_search .search {
+    padding: 45px 25px; }
   .container_nothing .nothing_found_txt {
     font-size: 22px;
     padding-bottom: 45px; }
