--- a/Shop/Search-page/app/scss/search.scss
+++ b/Shop/Search-page/app/scss/search.scss
@@ -46,6 +46,10 @@
     }
 }
 
+.filter .section .tab_content {
+    display: block;
+}
+
 .container_search {
 	form {
 		display: flex;
@@ -136,18 +140,20 @@
         display: block;
     }
     .container_search .input_group {
-    	width: auto;
+    	width: 100%;
+    }
+    .container_search form {
+        width: 100%;
     }
 
 }
 
 @media screen and (max-width: 576px) {
-	.container_search .search {
-		padding: 0px;
-		border: none;
-	}
     .search_inform {
         display: none;
+    }
+    .container_search .search {
+        padding: 45px 25px;
     }
     .container_nothing .nothing_found_txt {
     	font-size: 22px;
