--- a/Shop/lc-page/app/css/lc_all.css
+++ b/Shop/lc-page/app/css/lc_all.css
@@ -220,6 +220,8 @@
     .dashboard .link_container a {
       display: none;
       position: absolute;
+      left: 0;
+      top: 0;
       width: 100%;
       height: 100%;
       -webkit-transition: .3s;
