--- a/Shop/lc-page/app/scss/lc_all.scss
+++ b/Shop/lc-page/app/scss/lc_all.scss
@@ -197,6 +197,8 @@
         a {
             display: none;
             position: absolute;
+            left: 0;
+            top: 0;
             width: 100%;
             height: 100%;
             transition: .3s;
